docs(guides): add Storybook / kickstartDS component integration to main guide

--- a/packages/tools/docusaurus/docs/guides/create/index.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/index.mdx
@@ -12,6 +12,8 @@ In this guide we'll get your first Design System, based on **kickstartDS** of co
 
 You could say that this is **the** main guide for **kickstartDS**, as it branches out into a bunch of sub guides in the process. Hopefully giving you a well-rounded overview over everything offered and possible in the end. While also creating the draft for your first Design System in the process!
 
+TODO add disclaimer that this guide can be a great reference while using our starter, too, if following the whole guide (which is quite long) seems a bit too much. This allows only (re-)visiting the parts that are unclear. This page should serve as a great entry point for this, by giving a great / detailed overview, and adding deep links to parts of the (sub-)guides.
+
 The main steps will go as follows:
 
 1. [Start your Design System](./start.mdx)
